--- a/discount.html
+++ b/discount.html
@@ -30,7 +30,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
 <link rel="stylesheet" href="css/global.min.css" />
 <link rel="stylesheet" href="css/page.min.css" />
 
@@ -39,7 +39,8 @@
 <body id="app">
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- main container -->
   <main class="section-box discount">
     <section class="section">
@@ -50,7 +51,7 @@
         </div>
     </section>
     <section class="section">
-      <img src="https://fakeimg.pl/1900x700/" alt="優惠banner"/>
+      <img src="https://fakeimg.pl/1920x740/" alt="優惠banner"/>
     </section>
     <section class="section">
       <div class="content">
@@ -93,7 +94,7 @@
           </div>
         </div>
         <div class="attention">
-          <div class="note"><span class="material-icons">info</span>注意事項</div>
+          <div class="note"><span class="svg-icons i-notice"></span>注意事項</div>
           <ul class="s-font">
             <li>訂票張數限制</li>
             <li>訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂。</li>
@@ -106,7 +107,7 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
 
   <!-- footer -->
   <bottom-footer></bottom-footer>
