--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/page.min.css" />
@@ -130,7 +130,7 @@
 
 <body id="app">
   <!-- landing -->
-  <!-- <div class="landing">
+  <div class="landing">
     <div class="landing-page">
       <h1 style="--td: .8s">
         <div class="block-reveal" style="--bc: #C53932; --d: .6s">BROADWAY</div>
@@ -144,11 +144,12 @@
         <div class="scroller"></div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- carousel -->
   <div class="carousel">
     <div class="swiper s-swiper">
@@ -340,7 +341,7 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
 
   <!-- footer -->
   <bottom-footer></bottom-footer>
