--- a/quick-view.html
+++ b/quick-view.html
@@ -30,15 +30,21 @@
 <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
 <link rel="stylesheet" href="css/global.min.css" />
 <link rel="stylesheet" href="css/page.min.css" />
+<style>
+  .svg-icons{display: inline-block;} 
+  .i-wheel-chair{width: 20px;height: 20px; background: url("data:image/svg+xml,%3Csvg width='21' height='26' viewBox='0 0 21 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.79462 4.56C8.44215 4.55999 8.09761 4.45534 7.80468 4.25931C7.51174 4.06327 7.28361 3.78468 7.14918 3.45885C7.01476 3.13301 6.98009 2.7746 7.04959 2.42905C7.11909 2.08349 7.28961 1.76634 7.53955 1.51781C7.78949 1.26928 8.10759 1.10054 8.45353 1.03299C8.79947 0.965444 9.15768 1.00212 9.48275 1.13838C9.80783 1.27464 10.0851 1.50434 10.2795 1.79838C10.4739 2.09241 10.5766 2.43753 10.5746 2.79C10.572 3.26035 10.3833 3.71054 10.0497 4.04219C9.71622 4.37385 9.26498 4.56001 8.79462 4.56Z' fill='%23E45514'/%3E%3Cpath d='M19.7345 20.8197C19.5378 20.8105 19.3471 20.7492 19.1819 20.642C19.0167 20.5348 18.883 20.3856 18.7945 20.2097L16.1545 15.3897H9.15449C8.78216 15.3855 8.42509 15.2411 8.15448 14.9853C7.88388 14.7296 7.71963 14.3812 7.69449 14.0097L7.26449 7.44967C7.24536 7.06298 7.37956 6.68434 7.63794 6.396C7.89632 6.10767 8.25802 5.9329 8.64449 5.90967H9.12449C9.49764 5.90881 9.85715 6.04988 10.1301 6.30429C10.4031 6.55869 10.5691 6.90739 10.5945 7.27967L10.7345 9.45967H15.0845C15.2323 9.48612 15.3662 9.56372 15.4626 9.67889C15.559 9.79407 15.6118 9.93948 15.6118 10.0897C15.6118 10.2399 15.559 10.3853 15.4626 10.5004C15.3662 10.6156 15.2323 10.6932 15.0845 10.7197H10.7945L10.9645 12.9097H16.0945C16.2268 12.91 16.3582 12.9302 16.4845 12.9697H16.5445C16.708 12.999 16.8626 13.0658 16.9962 13.1646C17.1297 13.2635 17.2386 13.3918 17.3145 13.5397L20.4445 19.2797C20.5179 19.3914 20.5682 19.5167 20.5924 19.6482C20.6166 19.7796 20.6141 19.9146 20.5852 20.0452C20.5563 20.1757 20.5015 20.2991 20.4241 20.4081C20.3467 20.517 20.2482 20.6094 20.1345 20.6797C20.0162 20.7614 19.878 20.8098 19.7345 20.8197Z' fill='%23E45514'/%3E%3Cpath d='M1.76101 13.8803C2.33235 12.6175 3.20182 11.5122 4.29467 10.6596C4.29467 10.6596 4.48467 10.5096 4.78467 10.3196C4.91174 10.2309 5.06742 10.193 5.22104 10.2134C5.37467 10.2337 5.5151 10.3109 5.61467 10.4296C5.82467 10.6796 5.84467 10.9596 5.39467 11.3796C4.5 11.9965 3.75216 12.8027 3.20428 13.7412C2.65641 14.6797 2.32195 15.7273 2.22467 16.8096C2.10965 18.4456 2.54806 20.0726 3.46943 21.4293C4.3908 22.786 5.7416 23.7934 7.30467 24.2896C8.96323 24.7835 10.7431 24.6738 12.3285 23.98C13.9138 23.2862 15.2021 22.0531 15.9647 20.4996C16.0038 20.4191 16.0605 20.3483 16.1305 20.2925C16.2006 20.2367 16.2822 20.1973 16.3695 20.1771C16.4567 20.157 16.5474 20.1566 16.6348 20.1761C16.7222 20.1956 16.8042 20.2344 16.8747 20.2896C17.2306 20.6278 17.1035 20.9026 16.9374 21.262C16.9168 21.3065 16.8956 21.3523 16.8747 21.3996C16.0005 23.0109 14.6261 24.2941 12.9588 25.0558C11.2915 25.8176 9.42168 26.0165 7.63144 25.6225C5.8412 25.2286 4.22761 24.2632 3.03406 22.8719C1.84052 21.4806 1.13175 19.739 1.01467 17.9096C0.933557 16.5259 1.18968 15.1432 1.76101 13.8803Z' fill='%23E45514'/%3E%3Cpath d='M8.79462 4.56C8.44215 4.55999 8.09761 4.45534 7.80468 4.25931C7.51174 4.06327 7.28361 3.78468 7.14918 3.45885C7.01476 3.13301 6.98009 2.7746 7.04959 2.42905C7.11909 2.08349 7.28961 1.76634 7.53955 1.51781C7.78949 1.26928 8.10759 1.10054 8.45353 1.03299C8.79947 0.965444 9.15768 1.00212 9.48275 1.13838C9.80783 1.27464 10.0851 1.50434 10.2795 1.79838C10.4739 2.09241 10.5766 2.43753 10.5746 2.79C10.572 3.26035 10.3833 3.71054 10.0497 4.04219C9.71622 4.37385 9.26498 4.56001 8.79462 4.56Z' stroke='%23E45514' stroke-width='0.1' stroke-miterlimit='10'/%3E%3Cpath d='M19.7345 20.8197C19.5378 20.8105 19.3471 20.7492 19.1819 20.642C19.0167 20.5348 18.883 20.3856 18.7945 20.2097L16.1545 15.3897H9.15449C8.78216 15.3855 8.42509 15.2411 8.15448 14.9853C7.88388 14.7296 7.71963 14.3812 7.69449 14.0097L7.26449 7.44967C7.24536 7.06298 7.37956 6.68434 7.63794 6.396C7.89632 6.10767 8.25802 5.9329 8.64449 5.90967H9.12449C9.49764 5.90881 9.85715 6.04988 10.1301 6.30429C10.4031 6.55869 10.5691 6.90739 10.5945 7.27967L10.7345 9.45967H15.0845C15.2323 9.48612 15.3662 9.56372 15.4626 9.67889C15.559 9.79407 15.6118 9.93948 15.6118 10.0897C15.6118 10.2399 15.559 10.3853 15.4626 10.5004C15.3662 10.6156 15.2323 10.6932 15.0845 10.7197H10.7945L10.9645 12.9097H16.0945C16.2268 12.91 16.3582 12.9302 16.4845 12.9697H16.5445C16.708 12.999 16.8626 13.0658 16.9962 13.1646C17.1297 13.2635 17.2386 13.3918 17.3145 13.5397L20.4445 19.2797C20.5179 19.3914 20.5682 19.5167 20.5924 19.6482C20.6166 19.7796 20.6141 19.9146 20.5852 20.0452C20.5563 20.1757 20.5015 20.2991 20.4241 20.4081C20.3467 20.517 20.2482 20.6094 20.1345 20.6797C20.0162 20.7614 19.878 20.8098 19.7345 20.8197Z' stroke='%23E45514' stroke-width='0.1' stroke-miterlimit='10'/%3E%3Cpath d='M1.76101 13.8803C2.33235 12.6175 3.20182 11.5122 4.29467 10.6596C4.29467 10.6596 4.48467 10.5096 4.78467 10.3196C4.91174 10.2309 5.06742 10.193 5.22104 10.2134C5.37467 10.2337 5.5151 10.3109 5.61467 10.4296C5.82467 10.6796 5.84467 10.9596 5.39467 11.3796C4.5 11.9965 3.75216 12.8027 3.20428 13.7412C2.65641 14.6797 2.32195 15.7273 2.22467 16.8096C2.10965 18.4456 2.54806 20.0726 3.46943 21.4293C4.3908 22.786 5.7416 23.7934 7.30467 24.2896C8.96323 24.7835 10.7431 24.6738 12.3285 23.98C13.9138 23.2862 15.2021 22.0531 15.9647 20.4996C16.0038 20.4191 16.0605 20.3483 16.1305 20.2925C16.2006 20.2367 16.2822 20.1973 16.3695 20.1771C16.4567 20.157 16.5474 20.1566 16.6348 20.1761C16.7222 20.1956 16.8042 20.2344 16.8747 20.2896C17.2306 20.6278 17.1035 20.9026 16.9374 21.262C16.9168 21.3065 16.8956 21.3523 16.8747 21.3996C16.0005 23.0109 14.6261 24.2941 12.9588 25.0558C11.2915 25.8176 9.42168 26.0165 7.63144 25.6225C5.8412 25.2286 4.22761 24.2632 3.03406 22.8719C1.84052 21.4806 1.13175 19.739 1.01467 17.9096C0.933557 16.5259 1.18968 15.1432 1.76101 13.8803Z' stroke='%23E45514' stroke-width='0.1' stroke-miterlimit='10'/%3E%3C/svg%3E%0A") no-repeat center;
+            background-size: contain;}
+</style>
 </head>
 
 <body id="app">
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- main container -->
   <main class="section-box">
     <section class="section">
@@ -51,9 +57,7 @@
           <div class="seat-mark">
             <div class="mark selectable"><span>01</span>可選座位</div>
             <div class="mark sell"><span>01</span>已售出</div>
-            <div class="mark wheelchair"><span class="material-icons">
-              accessible
-            </span>輪椅位</div>
+            <div class="mark wheelchair"><span class="svg-icons i-wheel-chair"></span>輪椅位</div>
           </div>
           <div class="screen">
             <img src="image/svg/screen.svg" alt="screen-icon">
@@ -67,26 +71,22 @@
               </div>
               <div class="table-td">
                 <div class="td-block td-seat accessibility">
-                  <span class="material-icons">
-                    accessible
-                  </span>
+                  <span class="svg-icons i-wheel-chair"></span>
+
                 </div>
               </div>
               <div class="table-td"><div class="td-block td-seat accessibility">
-                <span class="material-icons">
-                  accessible
-                </span>
+                <span class="svg-icons i-wheel-chair"></span>
+
               </div></div>
               <div class="table-td"><div class="td-block td-seat accessibility">
-                <span class="material-icons">
-                  accessible
-                </span>
+                <span class="svg-icons i-wheel-chair"></span>
+
               </div></div>
               <div class="table-td">
                 <div class="td-block td-seat accessibility">
-                <span class="material-icons">
-                  accessible
-                </span>
+                  <span class="svg-icons i-wheel-chair"></span>
+
               </div></div>
               <div class="table-td">
                 <div class="td-block"></div>
@@ -101,30 +101,26 @@
               </div>
               <div class="table-td">
                 <div class="td-block td-seat accessibility">
-                  <span class="material-icons">
-                    accessible
-                  </span>
+                  <span class="svg-icons i-wheel-chair"></span>
+
                 </div>
               </div>
               <div class="table-td">
                 <div class="td-block td-seat accessibility">
-                  <span class="material-icons">
-                    accessible
-                  </span>
+                  <span class="svg-icons i-wheel-chair"></span>
+
                 </div>
               </div>
               <div class="table-td">
                 <div class="td-block td-seat accessibility">
-                  <span class="material-icons">
-                    accessible
-                  </span>
+                  <span class="svg-icons i-wheel-chair"></span>
+
                 </div>
               </div>
               <div class="table-td">
                 <div class="td-block td-seat accessibility">
-                  <span class="material-icons">
-                    accessible
-                  </span>
+                  <span class="svg-icons i-wheel-chair"></span>
+
                 </div>
               </div>
               <div class="table-td">
@@ -706,9 +702,7 @@
           </div>  
         </div>
         <div>
-          <strong><span class="material-icons">
-            error
-          </span> 請注意！</strong>
+          <strong><span class="svg-icons i-notice"></span> 請注意！</strong>
           <p>座位預覽僅供即時參考，實際可選座位將依訂票當前操作為主</p>
         </div>
         <div class="actions">
@@ -719,7 +713,7 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
 
   <!-- footer -->
   <bottom-footer></bottom-footer>
