--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
 <link rel="stylesheet" href="css/global.min.css" />
 <link rel="stylesheet" href="css/page.min.css" />
 </head>
@@ -38,7 +38,8 @@
 <body id="app">
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- main container -->
   <main class="section-box">
     <section class="section">
@@ -54,10 +55,10 @@
         <div class="tab-container">
           <div class="content-row">
             <div class="row-left row-5">
-              <img src="https://fakeimg.pl/450x250/" alt="百老匯影城實照" />
+              <img src="https://fakeimg.pl/780x430/" alt="百老匯影城實照" />
             </div>
             <div class="row-right row-5">
-              <img src="https://fakeimg.pl/450x250/" alt="百老匯影城實照" />
+              <img src="https://fakeimg.pl/780x430/" alt="百老匯影城實照" />
             </div>
           </div>
           <div class="info">
@@ -154,7 +155,7 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
 
   <!-- footer -->
   <bottom-footer></bottom-footer>
