--- a/book-step1.html
+++ b/book-step1.html
@@ -30,7 +30,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  
   <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/page.min.css" />
 
@@ -39,7 +39,8 @@
 <body id="app">
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- main container -->
   <main class="section-box">
     <section class="section">
@@ -263,10 +264,10 @@
           </div>
           <div class="actions">
             <a href="book-step1.html" class="back actions-btn ">
-              <span class="material-icons">west</span>BACK
+              <span class="svg-icons i-back"></span>BACK
             </a>
             <a href="book-step2.html" class="next actions-btn ">
-              NEXT<span class="material-icons">east</span>
+              NEXT<span class="svg-icons i-next"></span>
             </a>
           </div>
         </div>
@@ -275,7 +276,7 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
 
   <!-- footer -->
   <bottom-footer></bottom-footer>
