--- a/book.html
+++ b/book.html
@@ -30,16 +30,35 @@
   <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
   <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/page.min.css" />
+  <style>
+    .svg-icons {
+      display: inline-block;
+    }
 
+    .i-ticket-white,
+    .i-chair-white {
+      width: 25px;
+      height: 25px;
+      margin-left: 15px;
+    }
+
+    .i-video {
+      width: 40px;
+      height: 40px;
+      margin-right: 15px;
+      background: url("data:image/svg+xml,%3Csvg width='40' height='32' viewBox='0 0 40 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.1 24C16.5333 24 16.8917 23.8583 17.175 23.575C17.4583 23.2917 17.6 22.9333 17.6 22.5V17.4H22.7C23.1333 17.4 23.4917 17.2583 23.775 16.975C24.0583 16.6917 24.2 16.3333 24.2 15.9C24.2 15.4667 24.0583 15.1083 23.775 14.825C23.4917 14.5417 23.1333 14.4 22.7 14.4H17.6V9.3C17.6 8.86667 17.4583 8.50833 17.175 8.225C16.8917 7.94167 16.5333 7.8 16.1 7.8C15.6667 7.8 15.3083 7.94167 15.025 8.225C14.7417 8.50833 14.6 8.86667 14.6 9.3V14.4H9.5C9.06667 14.4 8.70833 14.5417 8.425 14.825C8.14167 15.1083 8 15.4667 8 15.9C8 16.3333 8.14167 16.6917 8.425 16.975C8.70833 17.2583 9.06667 17.4 9.5 17.4H14.6V22.5C14.6 22.9333 14.7417 23.2917 15.025 23.575C15.3083 23.8583 15.6667 24 16.1 24ZM3 32C2.2 32 1.5 31.7 0.9 31.1C0.3 30.5 0 29.8 0 29V3C0 2.2 0.3 1.5 0.9 0.9C1.5 0.3 2.2 0 3 0H29C29.8 0 30.5 0.3 31.1 0.9C31.7 1.5 32 2.2 32 3V13.75L38.7 7.05C38.9667 6.78333 39.25 6.71667 39.55 6.85C39.85 6.98333 40 7.21667 40 7.55V24.45C40 24.7833 39.85 25.0167 39.55 25.15C39.25 25.2833 38.9667 25.2167 38.7 24.95L32 18.25V29C32 29.8 31.7 30.5 31.1 31.1C30.5 31.7 29.8 32 29 32H3Z' fill='white'/%3E%3C/svg%3E ") no-repeat center / contain;
+    }
+  </style>
 </head>
 
 <body id="app">
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- main container -->
   <main class="section-box">
     <section class="section">
@@ -86,9 +105,7 @@
                 <div class="booktime">08.14<span>星期日</span></div>
               </div>
               <div class="cinema">
-                <span class="material-icons">
-                  video_call
-                </span>數位標準
+                <span class="svg-icons i-video"></span>數位標準
               </div>
               <div class="timetable">
                 <div class="time disable"><span>09:00</span></div>
@@ -106,17 +123,13 @@
                 <button class="quick-view">
                   <a href="quick-view.html" target="_blank">
                     <span><small>QUICK VIEW</small>預覽座位</span>
-                    <span class="material-icons">
-                      chair
-                    </span>
+                    <span class="svg-icons i-chair-white"></span>
                   </a>
                 </button>
                 <button class="buy-ticket">
                   <a href="book-step1.html">
                     <span><small>BUY TICKET</small>前往訂票</span>
-                    <span class="material-icons">
-                      confirmation_number
-                    </span>
+                    <span class="svg-icons i-ticket-white"></span>
                   </a>
                 </button>
               </div>
@@ -132,7 +145,7 @@
                 <div class="movie-level y12">護6級</div>
                 <div class="movie-title">
                   <p class="l-font">如果30歲還是處男，似乎就能成為魔法師</p>
-                  <span>Cherry Magic! Thirty Years Of Virginity Can Make You A Wizard ?!</span>
+                  <span>CHERRY Magic! Thirty Years Of Virginity Can Make You A Wizard ?!</span>
                 </div>
                 <div class="up-date">上映日期 2022-03-25</div>
                 <div class="list-item">
@@ -155,9 +168,7 @@
                 <div class="booktime">08.14<span>星期日</span></div>
               </div>
               <div class="cinema">
-                <span class="material-icons">
-                  video_call
-                </span>數位標準
+                <span class="svg-icons i-video"></span>數位標準
               </div>
               <div class="timetable">
                 <div class="time disable"><span>09:00</span></div>
@@ -177,7 +188,7 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
 
   <!-- footer -->
   <bottom-footer></bottom-footer>
