--- a/movies.html
+++ b/movies.html
@@ -30,7 +30,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
 <link rel="stylesheet" href="css/global.min.css" />
 <link rel="stylesheet" href="css/page.min.css" />
 </head>
@@ -38,7 +38,8 @@
 <body   id="app">
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- main container -->
   <main class="section-box">
     <section class="section">
@@ -56,7 +57,7 @@
             <div class="showing-list row-2">
               <a href="">
                 <div class="poster">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                  <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
                 </div>
                 <div class="movie-title l-font mul-ellipsis-1">
                   <p class="l-font ellipsis">劫命救護</p>
@@ -69,7 +70,7 @@
             <div class="showing-list row-2">
               <a href="">
                 <div class="poster">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                  <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
                 </div>
                 <div class="movie-title l-font mul-ellipsis-1">
                   <p class="l-font ellipsis">如果30歲還是處男，似乎就能成為魔法師</p>
@@ -82,7 +83,7 @@
             <div class="showing-list row-2">
               <a href="">
                 <div class="poster">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                  <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
                 </div>
                 <div class="movie-title l-font mul-ellipsis-1">
                   <p class="l-font ellipsis">劫命救護</p>
@@ -95,7 +96,7 @@
             <div class="showing-list row-2">
               <a href="">
                 <div class="poster">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                  <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
                 </div>
                 <div class="movie-title l-font mul-ellipsis-1">
                   <p class="l-font ellipsis">劫命救護</p>
@@ -108,7 +109,7 @@
             <div class="showing-list row-2">
               <a href="">
                 <div class="poster">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                  <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
                 </div>
                 <div class="movie-title l-font mul-ellipsis-1">
                   <p class="l-font ellipsis">劫命救護</p>
@@ -121,7 +122,7 @@
           <div class="showing-list row-2">
             <a href="">
               <div class="poster">
-                <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
               </div>
               <div class="movie-title l-font mul-ellipsis-1">
                 <p class="l-font ellipsis">劫命救護</p>
@@ -139,7 +140,7 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
   
   <!-- footer -->
   <bottom-footer></bottom-footer>
