--- a/news.html
+++ b/news.html
@@ -2,43 +2,44 @@
 <html lang="zh-Hant-TW">
 
 <head>
-<meta charset="UTF-8" />
-<title>Broadway Cinemas - 百老匯影城</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-<meta name="author" content="	Broadway百老匯影城">
-<meta name="copyright" content="Copyright© 2022 Broadway Cinemas All Rights Reserved.">
-<meta name="distribution" content="Taiwan">
-<meta name="rating" content="General">
-<meta name="keywords" content="電影,百老匯影城,影城">
-<meta name="description"
-  content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
-<meta name="url" content="">
-<link rel="canonical" href="">
-<meta property="og:url" content="">
-<meta property="og:image" content="image/favicon.png">
-<meta property="og:image:width" content="1000">
-<meta property="og:image:height" content="523">
-<meta property="og:type" content="article">
-<meta property="og:site_name" content="Broadway百老匯影城">
-<meta property="og:title" content="Broadway百老匯影城">
-<meta property="og:description"
-  content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
-<meta name="theme-color" content="#282828">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
-<link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<link rel="stylesheet" href="css/global.min.css" />
-<link rel="stylesheet" href="css/page.min.css" />
+  <meta charset="UTF-8" />
+  <title>Broadway Cinemas - 百老匯影城</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <meta name="author" content="	Broadway百老匯影城">
+  <meta name="copyright" content="Copyright© 2022 Broadway Cinemas All Rights Reserved.">
+  <meta name="distribution" content="Taiwan">
+  <meta name="rating" content="General">
+  <meta name="keywords" content="電影,百老匯影城,影城">
+  <meta name="description"
+    content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+  <meta name="url" content="">
+  <link rel="canonical" href="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="image/favicon.png">
+  <meta property="og:image:width" content="1000">
+  <meta property="og:image:height" content="523">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Broadway百老匯影城">
+  <meta property="og:title" content="Broadway百老匯影城">
+  <meta property="og:description"
+    content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+  <meta name="theme-color" content="#282828">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
+  <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
+  
+  <link rel="stylesheet" href="css/global.min.css" />
+  <link rel="stylesheet" href="css/page.min.css" />
 </head>
 
-<body   id="app">
+<body id="app">
   <!-- header -->
   <nav-header></nav-header>
-
+  <!-- modal -->
+  <modal></modal>
   <!-- main container -->
   <main class="section-box">
     <section class="section">
@@ -50,62 +51,64 @@
         <div class="content-row">
           <div class="event row-3-1">
             <a href="news-info.html ">
-            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-            <div>
-              <p class="sub-title">
-                看指定電影送限定海報
-              </p>
-              <hr class="hr-line"/>
-              <p>2022.08.13</p>
-            </div>
+              <div class="tag">TOPIC</div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  看指定電影送限定海報
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-            <div>
-              <p class="sub-title">
-                全台獨家 怪獸與鄧不力多的秘密 特別場
-              </p>
-              <hr class="hr-line" />
-              <p>2022.08.13</p>
-            </div>
+              <div class="tag">TOPIC</div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  全台獨家 怪獸與鄧不力多的秘密 特別場
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-            <div>
-              <p class="sub-title">
-                張國榮系列電影 數位修復版百老匯限定上映
-              </p>
-              <hr class="hr-line" />
-              <p>2022.08.13</p>
-            </div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  張國榮系列電影 數位修復版百老匯限定上映
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-            <div>
-              <p class="sub-title">
-                張國榮系列電影 數位修復版百老匯限定上映
-              </p>
-              <hr class="hr-line" />
-              <p>2022.08.13</p>
-            </div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  張國榮系列電影 數位修復版百老匯限定上映
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-            <div>
-              <p class="sub-title">
-                限量電影套餐 百老匯限定發售
-              </p>
-              <hr class="hr-line" />
-              <p>2022.08.13</p>
-            </div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  限量電影套餐 百老匯限定發售
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
         </div>
@@ -120,38 +123,39 @@
         <div class="content-row">
           <div class="event row-3-1">
             <a href="">
-                <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-                <div>
-                  <p class="sub-title">
-                    看指定電影送限定海報
-                  </p>
-                  <hr class="hr-line" />
-                  <p>2022.08.13</p>
-                </div>
+              <div class="tag yellow">TOPIC</div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  看指定電影送限定海報
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-            <div>
-              <p class="sub-title">
-                全台獨家 怪獸與鄧不力多的秘密 特別場
-              </p>
-              <hr class="hr-line" />
-              <p>2022.08.13</p>
-            </div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  全台獨家 怪獸與鄧不力多的秘密 特別場
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
-            <div>
-              <p class="sub-title">
-                張國榮系列電影 數位修復版百老匯限定上映
-              </p>
-              <hr class="hr-line" />
-              <p>2022.08.13</p>
-            </div>
+              <img src="https://fakeimg.pl/510x340/" alt="event-name" />
+              <div>
+                <p class="sub-title">
+                  張國榮系列電影 數位修復版百老匯限定上映
+                </p>
+                <hr class="hr-line" />
+                <p>2022.08.13</p>
+              </div>
             </a>
           </div>
         </div>
@@ -160,8 +164,8 @@
   </main>
   <!-- main container -->
 
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
-  
+  <div class="gotop"><span class="svg-icons i-arrow-up"></span></div>
+
   <!-- footer -->
   <bottom-footer></bottom-footer>
 
