調整行高 header背景 圖片大小 RWD

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/page.min.css" />
   <style>
-    .svg-icons{display: inline-block;margin-right: 10px;width: 23px;height: 23px;} 
+    .svg-icons{display: inline-block;margin-right: 10px;width: 17px;height: 17px;} 
     .i-pointer{ background: url("data:image/svg+xml,%3Csvg width='23' height='23' viewBox='0 0 23 23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.6774 21.1183C11.2774 22.8983 12.3974 22.9584 13.1874 21.2684L22.1874 1.95835C22.9874 0.258348 22.2474 -0.471651 20.5474 0.318349L1.22744 9.32835C-0.462559 10.1183 -0.402559 11.2383 1.37744 11.8383L8.37744 14.1583L10.6774 21.1183Z' fill='white'/%3E%3C/svg%3E%0A") no-repeat center;
             background-size: contain;}
   </style>
@@ -61,9 +61,9 @@
           <div class="content-row">
             <div class="row-left row-5">
               <ul class="info">
-                <li><span class="l-font">影城位置</span>台北市文山區羅斯福路四段200號</li>
-                <li><span class="l-font">聯繫電話</span>02-8663-6128</li>
-                <li><span class="l-font">聯繫信箱</span>borad.way200@msa.hinet.net</li>
+                <li><span class="l-font">影城位置</span><p>台北市文山區羅斯福路四段200號</p></li>
+                <li><span class="l-font">聯繫電話</span><p>02-8663-6128</p></li>
+                <li><span class="l-font">聯繫信箱</span><p>borad.way200@msa.hinet.net</p></li>
                 <li><span class="l-font">交通方式</span></li>
                   <label>捷運
                     <div>新店綠線公館站二號出口徒步十分鐘</div>
