--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     html {
       background-color: #191919!important;
     }
-
+    header{box-shadow: none;}
     .carousel {
       position: relative;
     }
