--- a/test.html
+++ b/test.html
@@ -9,106 +9,38 @@
   <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/page.min.css" />
-  <style>
-    .block-effect {
-  font-size: calc(8px + 6vw);
-  }
 
-.block-reveal {
-  --t: calc(var(--td) + var(--d));
-
-  color: transparent;
-  padding: 4px;
-
-  position: relative;
-  overflow: hidden;
-
-  animation: revealBlock 0s var(--t) forwards;
-}
-
-.block-reveal::after {
-  content: '';
-
-  width: 0%;
-  height: 100%;
-  padding-bottom: 4px;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  background: var(--bc);
-  animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
-}
-
-
-/* animations */
-@keyframes revealBlock {
-  100% {
-    color: #0f0f0f;
-  }
-}
-
-@keyframes revealingIn {
-
-  0% {
-    width: 0;
-  }
-
-  100% {
-    width: 100%;
-  }
-}
-
-@keyframes revealingOut {
-
-  0% {
-    transform: translateX(0);
-  }
-
-  100% {
-    transform: translateX(100%);
-  }
-
-}
-  </style>
 </head>
 
-<body   id="app">
+<body id="app">
   
-  <h1 class="block-effect" style="--td: 1.2s">
-    <div class="block-reveal" style="--bc: #4040bf; --d: .1s">Block</div>
-    <div class="block-reveal" style="--bc: #bf4060; --d: .5s">Revealing Effect</div>
-  </h1>
+  <!-- header -->
+  <nav-header></nav-header>
+  <!-- modal -->
+  <modal></modal>
+
+  <div class="user-account">
+    <div class="user">
+      HELLO!<span class="user-name">Yick</span><span class="svg-icons i-person"></span><span
+        class="svg-icons i-menu"></span>
+    </div>
+    <div class="account-sub">
+      <hr />
+      <a href="book-history.html" title="訂票查詢與取消">訂票查詢與取消</a>
+      <a href="account.html" title="會員資料">會員資料</a>
+      <a href="discount.html" title="會員優惠PLUS">會員優惠PLUS</a>
+    </div>
+    <div class="user-login">
+      <a href="#login" title="會員登入">會員登入</a>
+    </div>
+    <div class="user-regist">
+      <a href="#regist" title="加入會員">加入會員</a>
+    </div>
+  </div>
 
   <script src="js/jquery.min.js"></script>
+  <script src="js/vue.js"></script>
   <script src="js/index.js"></script>
-  <script>
-    const slideSwiper = new Swiper(".s-swiper", {
-      lazy: {
-        loadPrevNext: true,
-      },
-      preloadImages: false,
-      pagination: {
-        el: ".dot",
-        clickable: true,
-      },
-      autoplay: {
-        delay: 2000,
-        disableOnInteraction: false,
-      },
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-      breakpoints: {
-        992: {
-          slidesPerView: "auto",
-          spaceBetween: 10,
-        },
-      },
-    });
-  </script>
 
 </body>
 
