--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 <body id="app">
   
   <!-- header -->
-  <nav-header></nav-header>
+  <!-- <nav-header></nav-header> -->
   <!-- modal -->
   <modal></modal>
 
