優化效能 preload css

--- a/group-ticket.html
+++ b/group-ticket.html
@@ -30,7 +30,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
 
-<link rel="stylesheet" href="css/global.min.css" />
+<link rel="stylesheet" rel="preload" as="style" href="css/global.min.css" />
 <link rel="stylesheet" href="css/page.min.css" />
 </head>
 
