--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
   <title>BROADWAY CINEMAS - 百老匯影城</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   
-  <link rel="stylesheet" href="css/global.min.css" />
+  <link rel="stylesheet" rel="preload" as="style" href="css/global.min.css" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/page.min.css" />
 
