--- a/book-step3.html
+++ b/book-step3.html
@@ -30,7 +30,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
 <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-<link rel="stylesheet" href="css/global.min.css" />
+<link rel="stylesheet" rel="preload" as="style" href="css/global.min.css" />
 <link rel="stylesheet" href="css/page.min.css" />
 <style>
   .svg-icons{display: inline-block;} 
