--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/global.min.css" />
+<link rel="stylesheet" rel="preload" as="style" href="css/global.min.css" />
 <link rel="stylesheet" href="css/swiper-bundle.min.css" />
 <link rel="stylesheet" href="css/page.min.css" />
 <header>
