--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="landing-page">
       <h1 style="--td: .8s">
         <div class="block-reveal" style="--bc: #C53932; --d: .6s">BROADWAY</div>
-        <div class="block-reveal" style="--bc: #000; --d: .9s">CINEMAS</div>
+        <div class="block-reveal" style="--bc: #000; --d: .9s"><img class="reveal-svg" src="image/svg/landind-font.svg" alt="svg"></div>
       </h1>
     </div>
 
